	- Add missing unclamped limits for 3-axis static damping.
	- Adjust the release of the "Attack" command so that craft don't go dead-stick when under attack but not threatened enough to trigger evasion.
	- Fix AttackVIP targeting priority impacting target priority weighting if no enemy VIP is present.
	- When assigning turret targets, AI now checks if target is within max range of the turret.
- Countermeasures:
	- Add 'Ammo' gauges for Countermeasure dispensers for how many CMs they have remaining.
- Sensors:
	- Add support for slaving turrets via targeting cameras.
	- Fix 'Slave Turret' button occasionally locking the turret to the vessel's origin point or non-target point in space.
	- Locking a target will no longer automatically slave active turrets to the target when manually controlling a craft. To slave turrets to a locked radar/camera, use the 'Slave Turret' button. 
- Weapons:
	- Add a "Yaw Standby Angle" slider to gun turrets.
	- Remove maxEngagementRange (default 5000m) check from bombs when AI is selecting what weapon to use.
	- Fix aim lead offset for weapons with deploy animations.
	- Missiles:
		- Add improved missile controller.
		- Fix multi-missile launcher issues when railAmmo > launcher rails on the model.
		- Fix check for multi-mode engines being ignited and having fuel.
- Competition:
	- Add a "defaults" button to the scoring window to reset score weights to their default values.
	- Updated parsing and plotting scripts.
		- Using 'python parse_tournament_log_files.py -w cfg' reads the score weights from the score_weights.cfg file.
		- Using 'python plot_summary.py -i regex' creates the plot ignoring any craft matching the regex string.
- Spawning:
	- Automatically adjust the PRE range if the spawn distance would put craft outside the physics range.

v1.10.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix colliders on the AWACS Radar when using legless variant.