@@ -241,6 +241,7 @@ Localization
             #LOC_BDArmory_Settings_ResetArmor = Reset Armor of parts
             #LOC_BDArmory_Settings_ResetHull = Reset Material of parts
             #LOC_BDArmory_Settings_RestoreKAL = Restore KAL
+            #LOC_BDArmory_Settings_DisableWMOnSpawn = Disable Guard Mode on Spawn
             #LOC_BDArmory_Settings_IntakeHack = Hack Intakes
             #LOC_BDArmory_Settings_PWingsHack = Pwing Edge Lift
             #LOC_BDArmory_Settings_PWingsThickHP = PWing Thickness Based Mass/HP
